# bacman

./: README.md
.github/workflows/: baclet-build.yaml  baclet-clippy.yaml  baclet.yaml
bacdash/: next.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
bacdash/src/components/Layout/: Layout.tsx
bacdash/src/pages/: _app.tsx  index.tsx
baclet/: Cargo.toml
baclet/sample/: config.yaml
baclet/src/: config.rs  job.rs  main.rs
baclet/src/archive/: job.rs  mod.rs  schema.rs
baclet/src/destinations/: local_path.rs  mod.rs  schema.rs
baclet/src/schema/: job.rs  mod.rs  shared.rs
