[package]
name = "baclet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["cargo"] }
env_logger = "0.10.0"
flate2 = "1.0.25"
job_scheduler = "1.2.1"
log = "0.4.17"
mktemp = "0.5.0"
prometheus = "0.13.3"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.92"
serde_with = "2.2.0"
serde_yaml = "0.9.17"
tar = "0.4.38"
thiserror = "1.0.38"
